<resources>
	<string name="app_name">DiceBox</string>
	<string name="action_settings">Settings</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>

	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
	<string name="advantage_text">Äußere Umstände</string>
	<string name="bonusText">Boni:</string>
	<string name="abilityText">Ability</string>
	<string name="profText">Proficiency</string>
	<string name="itemText">Item</string>
	<string name="abilityHint">Ability Bonus</string>
	<string name="profHint">Proficiency Bonus</string>
	<string name="itemHint">Item Bonus</string>
	<string name="noAdvText">Normal</string>
	<string name="advText">Advantage</string>
	<string name="disadvText">Disadvantage</string>
	<string name="rollBtnText">Würfeln</string>
	<string name="damage_header">Schadens-Würfel</string>
	<string name="titleDieText">Schadenswürfel</string>
	<string name="critText">Kritisch</string>
	<string name="ability_menu_title">Ability Stats</string>
    <string name="strength_code">STR</string>
	<string name="dex_code">DEX</string>
	<string name="con_code">CON</string>
	<string name="int_code">INT</string>
	<string name="wis_code">WIS</string>
	<string name="char_code">CHR</string>
    <string name="save_text">Speichern</string>
	<string name="return_btn_txt">Zurück</string>
</resources>