<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".AbilityMenuActivity">

	<androidx.appcompat.widget.Toolbar
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:background="?attr/colorPrimary"
			android:theme="?attr/actionBarTheme"
			android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar2"
			app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent" app:title="@string/app_name"
			app:titleTextColor="@android:color/white"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:ems="10"
			android:id="@+id/editProf"
			android:layout_marginTop="24dp"
			app:layout_constraintTop_toBottomOf="@+id/toolbar2"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/input_offset_value"/>
	<TextView
			android:text="@string/profText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/textView"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
			app:layout_constraintBaseline_toBaselineOf="@+id/editProf"/>
	<TextView
			android:text="@string/strength_code"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/textView2"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
			app:layout_constraintBaseline_toBaselineOf="@+id/editSTR"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:ems="10"
			android:id="@+id/editSTR"
			app:layout_constraintTop_toBottomOf="@+id/editProf"
			android:layout_marginTop="8dp"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/input_offset_value"/>
	<TextView
			android:text="@string/dex_code"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/textView3"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
			app:layout_constraintBaseline_toBaselineOf="@+id/editDex"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:ems="10"
			android:id="@+id/editDex"
			app:layout_constraintTop_toBottomOf="@+id/editSTR"
			android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="@dimen/input_offset_value"/>
	<TextView
			android:text="@string/con_code"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/textView4"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
			app:layout_constraintBaseline_toBaselineOf="@id/editCON"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:ems="10"
			android:id="@+id/editCON"
			app:layout_constraintTop_toBottomOf="@+id/editDex"
			android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="@dimen/input_offset_value"/>
	<TextView
			android:text="@string/int_code"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/textView5"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
			app:layout_constraintBaseline_toBaselineOf="@id/editINT"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:ems="10"
			android:id="@+id/editINT"
			app:layout_constraintTop_toBottomOf="@id/editCON"
			android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="@dimen/input_offset_value"/>
	<TextView
			android:text="@string/wis_code"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/textView6"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
			app:layout_constraintBaseline_toBaselineOf="@id/editWIS"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:ems="10"
			android:id="@+id/editWIS"
			app:layout_constraintTop_toBottomOf="@id/editINT"
			android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="@dimen/input_offset_value"/>
	<TextView
			android:text="@string/char_code"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/textView7"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
			app:layout_constraintBaseline_toBaselineOf="@id/editCHARISMA"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:ems="10"
			android:id="@+id/editCHARISMA"
			app:layout_constraintTop_toBottomOf="@id/editWIS"
			android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="@dimen/input_offset_value"/>
	<Button
			android:text="@string/save_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/saveBtn"
			app:layout_constraintTop_toBottomOf="@+id/editCHARISMA"
			android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent" android:onClick="saveAction"/>
	<Button
			android:text="@string/return_btn_txt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/btnclose"
			android:onClick="returnToMain" android:layout_marginTop="16dp"
			app:layout_constraintTop_toBottomOf="@+id/saveBtn" app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>