<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/masterLayout">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintStart_toEndOf="@+id/advantageLayout"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:id="@+id/boniLayout">

        <TextView
                android:text="@string/bonusText"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textBoni"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <CheckBox
                android:text="@string/profText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkProficiency" app:layout_constraintTop_toBottomOf="@+id/checkAbility"
                app:layout_constraintStart_toStartOf="parent"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/checkAbility"
                app:layout_constraintTop_toBottomOf="@+id/textBoni" android:layout_marginTop="8dp"
                android:text="@string/abilityText" app:layout_constraintStart_toStartOf="parent"/>
        <CheckBox
                android:text="@string/itemText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/checkItem"
                app:layout_constraintTop_toBottomOf="@+id/checkProficiency"
                app:layout_constraintStart_toStartOf="parent"/>
        <androidx.constraintlayout.widget.Barrier android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content"
                                                  android:id="@+id/checkBoxBarrier" app:barrierDirection="right"
                                                  app:constraint_referenced_ids="checkProficiency,checkAbility,checkItem"
                                                  tools:layout_editor_absoluteX="127dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/checkBoxBarrier" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/checkAbility"
                app:layout_constraintBottom_toBottomOf="@+id/checkAbility" android:id="@+id/abilityBonus"
                android:importantForAutofill="no"
                android:hint="@string/abilityHint" android:textSize="14sp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/editTextNumberSigned5"
                android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@id/checkBoxBarrier"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/checkProficiency"
                app:layout_constraintBottom_toBottomOf="@+id/checkProficiency" android:textSize="14sp"
                android:importantForAutofill="no"
                android:hint="@string/profHint"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editTextNumberSigned6"
                android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@id/checkBoxBarrier"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/checkItem"
                app:layout_constraintBottom_toBottomOf="@+id/checkItem" android:textSize="14sp"
                android:importantForAutofill="no"
                android:hint="@string/itemHint" android:inputType="numberSigned"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/advantageLayout">

        <TextView
                android:text="@string/advantage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textAdvantage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup2"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textAdvantage"
                android:layout_marginTop="8dp">
            <RadioButton
                    android:text="@string/noAdvText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/radioButton"
                    tools:layout_editor_absoluteY="32dp"/>
            <RadioButton
                    android:text="@string/advText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/radioButton2"
            />
            <RadioButton
                    android:text="@string/disadvText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/radioButton3"
                    tools:layout_editor_absoluteY="219dp"/>
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.Barrier android:layout_width="wrap_content"
                                              android:layout_height="wrap_content" android:id="@+id/topBarrier"
                                              app:barrierDirection="bottom" tools:layout_editor_absoluteY="139dp"
                                              tools:layout_editor_absoluteX="16dp"
                                              app:constraint_referenced_ids="boniLayout,advantageLayout"/>
    <Button
            android:text="@string/rollBtnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnRoll"
            app:layout_constraintTop_toBottomOf="@id/topBarrier"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content" android:id="@+id/resultDisplay"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintTop_toTopOf="@id/topBarrier" android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/descriptionText"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/resultDisplay"
            android:layout_marginTop="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Small"/>


</androidx.constraintlayout.widget.ConstraintLayout>